--- a/pacman/pacman-all.yaml
+++ b/pacman/pacman-all.yaml
@@ -37,7 +37,7 @@ spec:
           containerPort: 27017
         volumeMounts:
           - name: mongo-db
-            mountPath: /data/db
+            mountPath: /bitnami/mongodb/data/db
       volumes:
         - name: mongo-db
           persistentVolumeClaim:
